# playpen_examples

./: README.md  pyproject.toml  requirements.txt
agents/: __init__.py  hf_agent.py
scripts/: cli.py
src/agents/: __init__.py  hf_agent.py
utils/: logger.py
