[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playpen_examples"
version = "0.1.0"
description = "A repository containing usage examples for Playpen"
authors = [
    { name = "Filippo Momentè", email = "filippo.momente@studenti.unitn.it" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["example", "pyproject", "sample"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "playpen @ git+https://github.com/momentino/playpen@agents",
    "torch",
    "transformers",
    "accelerate"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
exclude = ["build", "dist", ".venv"]

